--- a/app/src/main/res/layout/fragment_qutoesfrom_author.xml
+++ b/app/src/main/res/layout/fragment_qutoesfrom_author.xml
@@ -11,21 +11,23 @@
 
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/viewpager"
             android:layout_marginBottom="10dp"
+            android:layout_alignParentTop="true"
             android:text="authorname"
             android:id="@+id/autorname"
             android:textSize="20dp"
             android:textColor="#000"
-            android:gravity="center"/>
+            android:layout_centerHorizontal="true"
+            />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom"
+            android:layout_below="@+id/autorname"
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingBottom="30dp"
